website-deployment.yaml
# website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: mallasrinivas/demoapcheimage:v1
          ports:
            - containerPort: 80
