website-service.yaml
# website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30007
